ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 2.8.0-rc1
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      ... aborting the server. See trace below:

      2014-11-10T08:34:33.382-0500 F REPLSETS [conn18] Fatal DBException in logOp(): 112 WriteConflict
      2014-11-10T08:34:33.389-0500 F -        [conn18] terminate() called.
      
       0x101bf96 0x101bf39 0x7fcc3c910846 0x7fcc3c910873 0xcbb5b9 0xa73176 0xa7395e 0xc3437e 0xc34dff 0xb7a09f 0x9e113c 0x9e18a5 0x9e1aec 0x9e2155 0x9e510d 0xa0202d 0xa02da7 0xa038e1 0xc1fe6a 0xafff7a 0x7fc9ee 0xfd608d 0x7fcc3cf6ee9a 0x7fcc3c07e31d
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"400000","o":"C1BF96"},{"b":"400000","o":"C1BF39"},{"b":"7FCC3C85B000","o":"B5846"},{"b":"7FCC3C85B000","o":"B5873"},{"b":"400000","o":"8BB5B9"},{"b":"400000","o":"673176"},{"b":"400000","o":"67395E"},{"b":"400000","o":"83437E"},{"b":"400000","o":"834DFF"},{"b":"400000","o":"77A09F"},{"b":"400000","o":"5E113C"},{"b":"400000","o":"5E18A5"},{"b":"400000","o":"5E1AEC"},{"b":"400000","o":"5E2155"},{"b":"400000","o":"5E510D"},{"b":"400000","o":"60202D"},{"b":"400000","o":"602DA7"},{"b":"400000","o":"6038E1"},{"b":"400000","o":"81FE6A"},{"b":"400000","o":"6FFF7A"},{"b":"400000","o":"3FC9EE"},{"b":"400000","o":"BD608D"},{"b":"7FCC3CF67000","o":"7E9A"},{"b":"7FCC3BF8A000","o":"F431D"}],"processInfo":{ "mongodbVersion" : "2.7.9-pre-", "gitVersion" : "70dff8ebbac4ddc24ad5a742f7a27644a25ebfc8", "uname" : { "sysname" : "Linux", "release" : "3.5.0-54-generic", "version" : "#81~precise1-Ubuntu SMP Tue Jul 15 04:02:22 UTC 2014", "machine" : "x86_64" }, "somap" : [ { "elfType" : 2, "b" : "400000", "buildId" : "468C50BB421B3B21CB9AF219DEA41B331A318C7F" }, { "b" : "7FFFBF8FF000", "elfType" : 3, "buildId" : "CAB4773A6DC38342CE3FAEC3A776EF5FC8A277D4" }, { "b" : "7FCC3D184000", "path" : "/home/asya/wiredtiger/LOCAL_INSTALL/lib/libwiredtiger-2.4.2.so", "elfType" : 3, "buildId" : "7C4BC69DD4195055E3D917E76604B96A62C49C20" }, { "b" : "7FCC3CF67000", "path" : "/lib/x86_64-linux-gnu/libpthread.so.0", "elfType" : 3, "buildId" : "C340AF9DEE97C17C730F7D03693286C5194A46B8" }, { "b" : "7FCC3CD5F000", "path" : "/lib/x86_64-linux-gnu/librt.so.1", "elfType" : 3, "buildId" : "352C5B373A50E6C4AB881A5DB6F5766FDF81EEE0" }, { "b" : "7FCC3CB5B000", "path" : "/lib/x86_64-linux-gnu/libdl.so.2", "elfType" : 3, "buildId" : "D181AF551DBBC43E9D55913D532635FDE18E7C4E" }, { "b" : "7FCC3C85B000", "path" : "/usr/lib/x86_64-linux-gnu/libstdc++.so.6", "elfType" : 3, "buildId" : "B534DA725D06A04267EB2FEB92B9CC14C838B57B" }, { "b" : "7FCC3C55F000", "path" : "/lib/x86_64-linux-gnu/libm.so.6", "elfType" : 3, "buildId" : "817AA99B3DD02501F8BC04A3E9A9358A08F20D7D" }, { "b" : "7FCC3C349000", "path" : "/lib/x86_64-linux-gnu/libgcc_s.so.1", "elfType" : 3, "buildId" : "ECF322A96E26633C5D10F18215170DD4395AF82C" }, { "b" : "7FCC3BF8A000", "path" : "/lib/x86_64-linux-gnu/libc.so.6", "elfType" : 3, "buildId" : "E7863FF2EA3F4B5C6FF90689ADE4D6B5F3A78020" }, { "b" : "7FCC3D474000", "path" : "/lib64/ld-linux-x86-64.so.2", "elfType" : 3, "buildId" : "E25AD1A11CCF57E734116B8EC9C69F643DCA9F18" }, { "b" : "7FCC3BD73000", "path" : "/lib/x86_64-linux-gnu/libz.so.1", "elfType" : 3, "buildId" : "F695ECFCF3918D5D34989398A14B7ECDD9F46CD0" }, { "b" : "7FCC3BB6D000", "path" : "/usr/lib/libsnappy.so.1", "elfType" : 3, "buildId" : "73722FE265941076386865069324C698E3398297" } ] }}
       mongod(_ZN5mongo15printStackTraceERSo+0x26) [0x101bf96]
       mongod(+0xC1BF39) [0x101bf39]
       libstdc++.so.6(+0xB5846) [0x7fcc3c910846]
       libstdc++.so.6(+0xB5873) [0x7fcc3c910873]
       mongod(_ZN5mongo4repl5logOpEPNS_16OperationContextEPKcS4_RKNS_7BSONObjEPS5_Pbb+0x1E9) [0xcbb5b9]
       mongod(_ZN5mongo11UpdateStage18transformAndUpdateERNS_7BSONObjERNS_7DiskLocE+0x746) [0xa73176]
       mongod(_ZN5mongo11UpdateStage4workEPm+0x35E) [0xa7395e]
       mongod(_ZN5mongo12PlanExecutor7getNextEPNS_7BSONObjEPNS_7DiskLocE+0xAE) [0xc3437e]
       mongod(_ZN5mongo12PlanExecutor11executePlanEv+0x3F) [0xc34dff]
       mongod(_ZN5mongo14UpdateExecutor7executeEPNS_8DatabaseE+0x9F) [0xb7a09f]
       mongod(+0x5E113C) [0x9e113c]
       mongod(_ZN5mongo18WriteBatchExecutor10execUpdateERKNS_12BatchItemRefEPNS_7BSONObjEPPNS_16WriteErrorDetailE+0x75) [0x9e18a5]
       mongod(_ZN5mongo18WriteBatchExecutor11bulkExecuteERKNS_21BatchedCommandRequestEPSt6vectorIPNS_19BatchedUpsertDetailESaIS6_EEPS4_IPNS_16WriteErrorDetailESaISB_EE+0x13C) [0x9e1aec]
       mongod(_ZN5mongo18WriteBatchExecutor12executeBatchERKNS_21BatchedCommandRequestEPNS_22BatchedCommandResponseE+0x455) [0x9e2155]
       mongod(_ZN5mongo8WriteCmd3runEPNS_16OperationContextERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x1FD) [0x9e510d]
       mongod(_ZN5mongo12_execCommandEPNS_16OperationContextEPNS_7CommandERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x3D) [0xa0202d]
       mongod(_ZN5mongo7Command11execCommandEPNS_16OperationContextEPS0_iPKcRNS_7BSONObjERNS_14BSONObjBuilderEb+0xB47) [0xa02da7]
       mongod(_ZN5mongo12_runCommandsEPNS_16OperationContextEPKcRNS_7BSONObjERNS_11_BufBuilderINS_16TrivialAllocatorEEERNS_14BSONObjBuilderEbi+0x561) [0xa038e1]
       mongod(_ZN5mongo11newRunQueryEPNS_16OperationContextERNS_7MessageERNS_12QueryMessageERNS_5CurOpES3_b+0x76A) [0xc1fe6a]
       mongod(_ZN5mongo16assembleResponseEPNS_16OperationContextERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortEb+0xC3A) [0xafff7a]
       mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0xAE) [0x7fc9ee]
       mongod(_ZN5mongo17PortMessageServer17handleIncomingMsgEPv+0x4BD) [0xfd608d]
       libpthread.so.0(+0x7E9A) [0x7fcc3cf6ee9a]
       libc.so.6(clone+0x6D) [0x7fcc3c07e31d]
      -----  END BACKTRACE  -----
      

      Reported by asya

            Assignee:
            Eliot Horowitz (Inactive)
            Reporter:
            Greg Studer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: