SERVER-16046: only one thread should cleanup capped collections