src/mongo/db/storage/wiredtiger/wiredtiger_record_store.h
@@ -246,6 +246,7 @@ namespace mongo {
         const int64_t _cappedMaxSize;
         const int64_t _cappedMaxDocs;
         CappedDocumentDeleteCallback* _cappedDeleteCallback;
+        boost::mutex _cappedDeleterMutex; // see commend in ::cappedDeleteAsNeeded
 
         const bool _useOplogHack;
 
